intake agitate and default command fixes